[package]
name = "netidx-dbus"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[dependencies]
netidx-tools-core = "0.12"
netidx = "0.12"
zbus = { path = "../zbus/zbus", version = "3", default-features = false, features = [ "tokio", "xml" ] }
zbus_names = {version = "2", path = "../zbus/zbus_names" }
zvariant = { version = "3", path = "../zbus/zvariant" }
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
structopt = "0.3"
env_logger = "0.9"
log = "0.4"
fxhash = "0.2"
