[package]
name = "netidx-dbus"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[dependencies]
netidx-protocols = "0.12"
netidx-tools-core = "0.12"
netidx = "0.12"
dbus = {version = "0.9", features = ["futures"]}
dbus-tokio = "0.7"
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.6"
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
structopt = "0.3"
env_logger = "0.9"
log = "0.4"
fxhash = "0.2"
