[package]
name = "netidx-dbus"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "talk to dbus services with netidx"
repository = "https://github.com/estokes/netidx-dbus"
readme = "README.md"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[dependencies]
netidx-protocols = { version = "0.27" }
netidx-tools-core = { version = "0.27" }
netidx = { version = "0.27" }
dbus = {version = "0.9", features = ["futures"]}
dbus-tokio = "0.7"
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.6"
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
structopt = "0.3"
env_logger = "0.11"
log = "0.4"
fxhash = "0.2"
rand = "0.8"
arcstr = "1.2.0"
